css fixes for aligning both headers

--- a/app/css/core/_variables.scss
+++ b/app/css/core/_variables.scss
@@ -8,7 +8,7 @@ $pending: #428BCA;
 
 $yellow-lightest: #ffffee;
 
-$header-height: 46px;
+$header-height: 47px;
 
 // Bootstrap variable overrides
 
