--- a/app/css/pages/tests/_iframe.scss
+++ b/app/css/pages/tests/_iframe.scss
@@ -65,12 +65,11 @@
       line-height: 22px;
       padding: 10px;
       color: #888;
-      border-top: 0;
-      border: 1px solid #ddd;
+      border-bottom: 1px solid #ddd;
       left: 0;
       right: 0;
       top: 0;
-      box-shadow: 0 2px 3px #888;
+      // box-shadow: 0 2px 3px #888;
 
       .iframe-menu {
         float: right;
